Fix wrong background color for Spotify RPC

--- a/css/theme.css
+++ b/css/theme.css
@@ -4287,7 +4287,8 @@ div.now-playing-add span.link:hover {
 }
 
 [class*="userPopout-"] [class*="bodyNormal-"] {
-	background: transparent;
+    background: transparent!important;
+    border-bottom: none;
 }
 .theme-dark .activityProfile-2pymp0 .content-P9ThHS, .theme-dark .activityProfile-2pymp0 .headerText-2CVBxK, .theme-dark .activityUserPopout-1nmgaw .content-P9ThHS, .theme-dark .activityUserPopout-1nmgaw .headerText-2CVBxK, .theme-light .activityProfile-2pymp0 .content-P9ThHS, .theme-light .activityProfile-2pymp0 .headerText-2CVBxK, .theme-light .activityUserPopout-1nmgaw .content-P9ThHS, .theme-light .activityUserPopout-1nmgaw .headerText-2CVBxK {
 	color: white!important;
